tdf#107405 Allow kerning less than -2

Fallout from 9a745d54a5c7470180f41494283983a3b8b84a51

Change-Id: Ied4d83eb614830718cf304e7010f17516e4a9429
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142388
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>